--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,8 @@ body {
     text-align: center;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    height: 100vh;
+    overflow-y: hidden;
     background: #dde1e7;
 }
 
